docker multistage builds: compose files

--- a/nginx/multistage/graphql/docker-compose.yml
+++ b/nginx/multistage/graphql/docker-compose.yml
@@ -1,14 +1,26 @@
-# Use root/example as user/password credentials
 version: "3.6"
 
 networks:
-    - graphbook/in.production: {},
-    - graphbook/production: {},
+    graphbook/in.production: {}
+    graphbook/production: {}
+
+secrets:
+    db_user:
+        file: ./secrets/db_user.txt
+    db_password:
+        file: ./secrets/db_password.txt
+    db_root_password:
+        file: ./secrets/db_root_password.txt
+
 services:
     database:
-        image: mongo:latest
+        image: mariadb:latest
         container_name: database_graphbook
-        hostname: database.graphbook.pe
+        hostname: ${DATABASE_HOSTNAME}
+        secrets:
+            - db_user
+            - db_password
+            - db_root_password
         labels:
             edu.cibertec.votoelectronico.project: "GraphBook"
             edu.cibertec.votoelectronico.version: "1.0"
@@ -19,21 +31,27 @@ services:
         networks:
             - graphbook/in.production
         ports:
-            - "27018:27017"
+            - "3306:3306"
         restart: always
         environment:
-            MONGO_INITDB_ROOT_USERNAME: admin
-            MONGO_INITDB_ROOT_PASSWORD: $$admin123.a
-            MONGO_INITDB_DATABASE: admin
+            MARIADB_USER_FILE: /run/secrets/db_user
+            MARIADB_PASSWORD_FILE: /run/secrets/db_password
+            MARIADB_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+            MARIADB_DATABASE: ${DATABASE_NAME}
         volumes:
-            - ./data/mongo-scripts/:/docker-entrypoint-initdb.d/
-        command: ["--auth"]
+            - ./data/db-scripts/:/docker-entrypoint-initdb.d/
+            - ./data/db/:/var/lib/mysql
     api:
         build:
             context: ./
             dockerfile: Dockerfile
+        image: psharpx/graphbook-api:${TAG}
         container_name: api_graphbook
         hostname: api.graphbook.pe
+        secrets:
+            - db_user
+            - db_password
+            - db_root_password
         labels:
             edu.cibertec.votoelectronico.project: "GraphBook"
             edu.cibertec.votoelectronico.version: "1.0"
@@ -44,27 +62,22 @@ services:
         networks:
             - graphbook/in.production
             - graphbook/production
-        ports:
-            - "8080:8080"
-            - "9990:9990"
         restart: always
-        volumes:
-            - ./data/log:/opt/jboss/wildfly/standalone/log
-        command:
-            [
-                "/opt/jboss/wildfly/bin/standalone.sh",
-                "-b",
-                "0.0.0.0",
-                "-bmanagement",
-                "0.0.0.0",
-            ]
+        environment:
+            HOST: ${DATABASE_HOSTNAME}
+            DATABASE: ${DATABASE_NAME}
+            USERNAME: /run/secrets/db_user
+            PASSWORD: /run/secrets/db_password
         depends_on:
             - database
     web:
         build:
             context: ./
             dockerfile: Dockerfile.client
-        container_name: client_emisionvotos
+            args:
+                SOME_ARGS: some_args
+        image: psharpx/graphbook-web:${TAG}
+        container_name: web_graphbook
         hostname: web.graphbook.pe
         labels:
             edu.cibertec.votoelectronico.project: "GraphBook"
@@ -76,16 +89,5 @@ services:
         networks:
             - graphbook/production
         restart: always
-        environment:
-            - JAVA_OPTS
-        entrypoint:
-            [
-                "./wait-for-it.sh",
-                "api:8080",
-                "--",
-                "sh",
-                "-c",
-                "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /EmisionVoto_Client-1.0-SNAPSHOT.jar",
-            ]
         depends_on:
             - api
