--- a/nginx/multistage/graphql/Dockerfile
+++ b/nginx/multistage/graphql/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:14-alpine AS builder
 
-ARG MAIN_DIR=graphbook
 ARG SOURCE_CODE_URL=https://github.com/pSharpX/graphbook.git
+ARG MAIN_DIR=graphbook
 ARG WORKPLACE_PATH=/opt/source
+
+WORKDIR ${WORKPLACE_PATH}
 
 RUN apk update && \
     apk add git && \
-    git clone ${SOURCE_CODE_URL} ${MAIN_DIR} && \
-    mkdir ${WORKPLACE_PATH} && \ 
-    mv ${MAIN_DIR} ${WORKPLACE_PATH}
+    git clone ${SOURCE_CODE_URL} ${MAIN_DIR}
 
 WORKDIR ${WORKPLACE_PATH}/${MAIN_DIR}
 
@@ -18,7 +18,6 @@ FROM node:14-alpine
 
 ARG MAIN_DIR=graphbook
 ARG WORKPLACE_PATH=/opt/source
-ARG APPLICATION_PATH=${WORKPLACE_PATH}/${MAIN_DIR}
 
 LABEL edu.cibertec.votoelectronico.project.name="GraphBook" \
     edu.cibertec.votoelectronico.project.key="graphbook" \
@@ -28,10 +27,12 @@ LABEL edu.cibertec.votoelectronico.project.name="GraphBook" \
     edu.cibertec.votoelectronico.author.email="crivera2093@gmail.com" \
     edu.cibertec.votoelectronico.author.url="https://github.com/pSharpX"
 
-RUN mkdir ${WORKPLACE_PATH} && mkdir ${APPLICATION_PATH}
+WORKDIR ${WORKPLACE_PATH}/${MAIN_DIR}
 
-COPY --from=builder ${APPLICATION_PATH}/dist/server ${APPLICATION_PATH}
+COPY --from=builder ${WORKPLACE_PATH}/${MAIN_DIR}/package.json package.json
+COPY --from=builder ${WORKPLACE_PATH}/${MAIN_DIR}/dist dist
 
-WORKDIR ${APPLICATION_PATH}
+RUN npm install --only=production
 
-CMD [ "node", "bundle.js" ]
+EXPOSE 8000
+CMD [ "npm", "run", "server:production" ]
