forwarding port for nginx client

--- a/nginx/multistage/graphql/docker-compose.yml
+++ b/nginx/multistage/graphql/docker-compose.yml
@@ -89,5 +89,7 @@ services:
         networks:
             - graphbook/production
         restart: always
+        ports:
+            - "8080:80"
         depends_on:
             - api
