adding nginx server as load balancer

--- a/nginx/multistage/graphql/config/vhost_server.conf
+++ b/nginx/multistage/graphql/config/vhost_server.conf
@@ -1,23 +1,15 @@
+upstream integration_apps {
+      server api.graphbook.pe:8000;
+}
+
 server {
   listen 80;
-  server_name api.graphbook.pe;
+  server_name integration.graphbook.pe;
 
   root /opt/source/graphbook;
 
   location / {  
-        index index.html;
-  }
-
-  error_page 404 /custom404.html;
-
-  location = /custom404.html {
-        internal;
-  }
-
-  error_page 500 502 503 504 /custom50x.html;
-
-  location = /custom50x.html {
-        internal;
+        proxy_pass http://integration_apps/;
   }
 
 }
