--- a/nginx/multistage/graphql/config/vhost_client.conf
+++ b/nginx/multistage/graphql/config/vhost_client.conf
@@ -3,21 +3,14 @@ server {
   server_name web.graphbook.pe;
 
   root /opt/source/graphbook;
+  index index.html index.htm index.nginx-debian.html;
+
+  location /graphql {
+        proxy_pass http://integration.graphbook.pe/;
+  }
 
   location / {  
-        index index.html;
-  }
-
-  error_page 404 /custom404.html;
-
-  location = /custom404.html {
-        internal;
-  }
-
-  error_page 500 502 503 504 /custom50x.html;
-
-  location = /custom50x.html {
-        internal;
+      try_files $uri $uri/ =404;
   }
 
 }
