--- a/nginx/multistage/graphql/config/vhost_client.conf
+++ b/nginx/multistage/graphql/config/vhost_client.conf
@@ -6,7 +6,7 @@ server {
   index index.html index.htm index.nginx-debian.html;
 
   location /graphql {
-        proxy_pass http://integration.graphbook.pe/;
+        proxy_pass http://integration.graphbook.pe/graphql;
   }
 
   location / {  
