fix label project

--- a/nginx/multistage/graphql/Dockerfile.client
+++ b/nginx/multistage/graphql/Dockerfile.client
@@ -20,13 +20,13 @@ ARG MAIN_DIR=graphbook
 ARG WORKPLACE_PATH=/opt/source
 ARG APPLICATION_PATH=${WORKPLACE_PATH}/${MAIN_DIR}
 
-LABEL edu.cibertec.votoelectronico.project.name="GraphBook" \
-    edu.cibertec.votoelectronico.project.key="graphbook" \
-    edu.cibertec.votoelectronico.project.version="1.0" \
-    edu.cibertec.votoelectronico.project.description="Social Network Application" \
-    edu.cibertec.votoelectronico.author.name="Christian Rivera" \
-    edu.cibertec.votoelectronico.author.email="crivera2093@gmail.com" \
-    edu.cibertec.votoelectronico.author.url="https://github.com/pSharpX"
+LABEL edu.cibertec.graphbook.project.name="GraphBook" \
+    edu.cibertec.graphbook.project.key="graphbook" \
+    edu.cibertec.graphbook.project.version="1.0" \
+    edu.cibertec.graphbook.project.description="Social Network Application" \
+    edu.cibertec.graphbook.author.name="Christian Rivera" \
+    edu.cibertec.graphbook.author.email="crivera2093@gmail.com" \
+    edu.cibertec.graphbook.author.url="https://github.com/pSharpX"
 
 RUN mkdir ${WORKPLACE_PATH} && mkdir ${APPLICATION_PATH}
 
