--- a/nginx/multistage/graphql/Dockerfile
+++ b/nginx/multistage/graphql/Dockerfile
@@ -42,4 +42,4 @@ RUN npm install
 
 EXPOSE 8000
 #CMD [ "npm", "run", "server:production" ]
-ENTRYPOINT [ "entrypoint.sh" ] 
+ENTRYPOINT [ "./entrypoint.sh" ] 
